--- a/code/model_training.ipynb
+++ b/code/model_training.ipynb
@@ -146,8 +146,8 @@
    "source": [
     "def encoder_block(input_layer, filters, strides):\n",
     "    \n",
-    "    # TODO Create a separable convolution layer using the separable_conv2d_batchnorm() function.\n",
-    "    \n",
+    "    # Create a separable convolution layer using the separable_conv2d_batchnorm() function.\n",
+    "    output_layer = separable_conv2d_batchnorm(input_layer, filters, strides)\n",
     "    return output_layer"
    ]
   },
@@ -172,11 +172,15 @@
    "source": [
     "def decoder_block(small_ip_layer, large_ip_layer, filters):\n",
     "    \n",
-    "    # TODO Upsample the small input layer using the bilinear_upsample() function.\n",
+    "    # Upsample the small input layer using the bilinear_upsample() function.\n",
+    "    upsample = bilinear_upsample(small_ip_layer)\n",
     "    \n",
-    "    # TODO Concatenate the upsampled and large input layers using layers.concatenate\n",
+    "    # Concatenate the upsampled and large input layers using layers.concatenate\n",
+    "    concatenate = layers.concatenate([upsample, large_ip_layer])\n",
     "    \n",
-    "    # TODO Add some number of separable convolution layers\n",
+    "    # Add some number of separable convolution layers\n",
+    "    sep_conv = separable_conv2d_batchnorm(concatenate, filters, 1)\n",
+    "    output_layer = separable_conv2d_batchnorm(sep_conv, filters, 1)\n",
     "    \n",
     "    return output_layer"
    ]
@@ -205,16 +209,20 @@
    "source": [
     "def fcn_model(inputs, num_classes):\n",
     "    \n",
-    "    # TODO Add Encoder Blocks. \n",
+    "    # Add Encoder Blocks. \n",
     "    # Remember that with each encoder layer, the depth of your model (the number of filters) increases.\n",
-    "\n",
-    "    # TODO Add 1x1 Convolution layer using conv2d_batchnorm().\n",
+    "    layer_1 = encoder_block(inputs, 64, 2)\n",
+    "    layer_2 = encoder_block(layer_1, 128, 2)\n",
     "    \n",
-    "    # TODO: Add the same number of Decoder Blocks as the number of Encoder Blocks\n",
+    "    # Add 1x1 Convolution layer using conv2d_batchnorm().\n",
+    "    layer_3 = conv2d_batchnorm(layer_2, 256, kernel_size=1, strides=1)\n",
     "    \n",
+    "    # Add the same number of Decoder Blocks as the number of Encoder Blocks\n",
+    "    layer_4 = decoder_block(layer_3, layer_1, 128)\n",
+    "    layer_5 = decoder_block(layer_4, inputs, 64)\n",
     "    \n",
     "    # The function returns the output layer of your model. \"x\" is the final layer obtained from the last decoder_block()\n",
-    "    return layers.Conv2D(num_classes, 1, activation='softmax', padding='same')(x)"
+    "    return layers.Conv2D(num_classes, 3, activation='softmax', padding='same')(layer_5)"
    ]
   },
   {
@@ -269,12 +277,12 @@
    },
    "outputs": [],
    "source": [
-    "learning_rate = 0\n",
-    "batch_size = 0\n",
-    "num_epochs = 0\n",
-    "steps_per_epoch = 200\n",
+    "learning_rate = 0.001\n",
+    "batch_size = 64\n",
+    "num_epochs = 15\n",
+    "steps_per_epoch = 50\n",
     "validation_steps = 50\n",
-    "workers = 2"
+    "workers = 20"
    ]
   },
   {
@@ -544,7 +552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   },
   "widgets": {
    "state": {},
