--- a/code/model_training.ipynb
+++ b/code/model_training.ipynb
@@ -209,19 +209,18 @@
    "source": [
     "def fcn_model(inputs, num_classes):\n",
     "    \n",
-    "    # Add Encoder Blocks. \n",
-    "    # Remember that with each encoder layer, the depth of your model (the number of filters) increases.\n",
+    "    # Encoder Blocks. \n",
     "    layer_1 = encoder_block(inputs, 64, 2)\n",
     "    layer_2 = encoder_block(layer_1, 128, 2)\n",
     "    \n",
-    "    # Add 1x1 Convolution layer using conv2d_batchnorm().\n",
+    "    # 1x1 Convolution layer.\n",
     "    layer_3 = conv2d_batchnorm(layer_2, 256, kernel_size=1, strides=1)\n",
     "    \n",
-    "    # Add the same number of Decoder Blocks as the number of Encoder Blocks\n",
+    "    # Decoder Blocks\n",
     "    layer_4 = decoder_block(layer_3, layer_1, 128)\n",
     "    layer_5 = decoder_block(layer_4, inputs, 64)\n",
     "    \n",
-    "    # The function returns the output layer of your model. \"x\" is the final layer obtained from the last decoder_block()\n",
+    "    # Output Layer\n",
     "    return layers.Conv2D(num_classes, 3, activation='softmax', padding='same')(layer_5)"
    ]
   },
@@ -978,7 +977,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   },
   "widgets": {
    "state": {},
